improved builders experimental

--- a/builders.tex
+++ b/builders.tex
@@ -1438,7 +1438,7 @@ cada sucesor y selecciona aquel que tenga el mayor valor (líneas 30 a 38).
 
 
 \subsection{Uso de métodos generadores en \emph{drivers} para JPF}
-
+\label{sec:jpf-builders}
 \cacho{No estoy seguro si esto ya lo llevo a preliminates, no tengo NCL ahi}
 Como se dicution en la sección de preliminares (\ref{sec:jpf})), \emph{Java PathFinder} (JPF) es un verificador de modelos para programas Java
 basado en exploración explícita del espacio de estados que permite implementar
