--- a/tables/coverageRandoop.tex
+++ b/tables/coverageRandoop.tex
@@ -1,4 +1,6 @@
 \begin{table}[H]
+\centering
+
 {\scriptsize
 
 \begin{tabular}{l |r |cc |cc }
@@ -117,7 +119,7 @@
  
  \end{tabular}%
 }
-\caption{Cobertura de ramas y lineas con las suites gneeradas con toda la API y solo con los métodos generadores}
+\caption{Cobertura de ramas y lineas con las suites genereadas con toda la API y solo con los métodos generadores}
 \label{tab:results-coverage}
  
 \end{table}
